--- a/dom/index.html
+++ b/dom/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+
 <head>
-<html lang="en">
+  <html lang="en">
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,23 +10,36 @@
   <!--css import-->
   <link rel="stylesheet" href="css/style.css" />
 
-  <title>BluePrint</title>
-  </head>
+  <title>The DOM</title>
+</head>
 
-  <body>
-    <div id="card">
-      <p>The knives seemed to move of their own accord, gliding with a random collection of European furniture, as though Deane had once intended to use the place as his home.
-</p>
-    </div>
+<body>
 
-    <div class="card-dos">
-      <p>No light but the muted purring of the arcade showed him broken lengths of damp chipboard and the corners he’d cut in Night City, and still he’d see the matrix in his jacket pocket.
-</p>
-    </div>
+  <header class="pd mt">
+    <h1 class="titulo">TITULO DE LA PAGINA </h1>
+    <button class="p" id="red-button">RED</button>
+    <button class="p" id="yellow-button">YELLOW</button>
+    <button class="p" id="green-button">GREEN</button>
+    <button class="p" id="none-button">NONE</button>
 
-   
+  </header>
+
+  <div id="card">
+    <p>The knives seemed to move of their own accord, gliding with a random collection of European furniture, as though
+      Deane had once intended to use the place as his home.
+    </p>
+  </div>
+
+  <div class="card-dos">
+    <p>No light but the muted purring of the arcade showed him broken lengths of damp chipboard and the corners he’d cut
+      in Night City, and still he’d see the matrix in his jacket pocket.
+    </p>
+  </div>
 
 
-    <script src="js/app.js"></script>
-  </body>
+
+
+  <script src="js/app.js"></script>
+</body>
+
 </html>
